# TTC

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
.github/: GOOD_FIRST_ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
catalog/: README.md
compatibility/: compatibility.json
contracts/: documentation.json
crates/forge-contract/: Cargo.toml
crates/forge-contract/src/: lib.rs  migrations.rs  patch.rs  semver.rs
crates/forge-contract/tests/: boundary_fuzz_corpus.rs  fuzz_corpus.rs  lockfile_resolution.rs  migrations.rs  properties.rs
crates/forge-gen/: Cargo.toml
crates/forge-gen/src/: lib.rs  main.rs
crates/forge-geometry/: Cargo.toml
crates/forge-geometry/src/: collide.rs  dfm.rs  lib.rs  massprops.rs  polymesh.rs  primitives.rs
crates/forge-motion/: Cargo.toml
crates/forge-motion/src/: arm.rs  biped.rs  fpv.rs  lib.rs  params.rs  quadruped.rs
crates/forge-motion/tests/: tape_parity.rs
crates/forge-sim/: Cargo.toml
crates/forge-sim/src/: export.rs  heavy.rs  interop.rs  lib.rs  rapier.rs  runtime.rs  thrust_table.rs  training.rs
crates/forge-sim/tests/: boundary_fuzz_corpus.rs  gen_fixtures.sh  write_fixtures.rs
crates/forge-sim/tests/fixtures/: import_rover.mjcf  import_rover.urdf  mujoco-parity-baseline.json  vx2-mini.mjcf.xml  vx2-mini.urdf
crates/forge-validate/: Cargo.toml
crates/forge-validate/src/: codesign.rs  compat.rs  file_catalog.rs  lib.rs  main.rs  recorder.rs
crates/forge-validate/tests/: catalog_performance_grid.rs  codesign_cli.rs  import_driveable.rs  proof_pair.rs  sim_parity_cli.rs  version_cli.rs
crates/forge-wasm/: Cargo.toml
crates/forge-wasm/src/: golden.rs  lib.rs  session.rs
crates/forge-wasm/tests/: golden_pinned.rs
crates/forge-wasm/tests/fixtures/: golden.jsonl
docs/: API-EVENT-ARTIFACT-REFERENCE.md  API-MIGRATIONS.md  BEST-PRACTICES.md  BROWSER-SUPPORT.md  COMPATIBILITY.md  CONTRIBUTOR-ONBOARDING.md  DATA-LIFECYCLE.md  DEBUGGING.md  DECISIONS.md  DEPRECATIONS.md  EXECUTION-ROADMAP.md  EXTERNAL-ACCEPTANCE.md  FORGE-plan-v2.md  FORGE-plan.md  FORGE-vision-and-architecture.md  GLOSSARY.md  GOLDEN-ARTIFACTS.md  MIGRATIONS.md  MJX-DECISION.md  MODAL-OPERATIONS.md  OPERATIONS.md  PROJECT-STATE.md  PUBLICATION.md  README.md  RELEASE.md  REPOSITORY-GOVERNANCE.md  ROADMAP.md  THREAT-MODEL.md  TODO.md  TRADEMARK-SEARCH.md  architecture.md  golden-artifact-registry.json  risk-register.md  security-safety-legal.md
evals/: brief25.corpus.json
examples/: README.md  expected-verdicts.json  hrx7.forge.json  qd-mini.forge.json  vx2-mini.forge.json  vx2-proof.forge.json
infra/: compose.hardened.json  docker-compose.yml
prototype/: README.md  cad-object-studio.html  extracted-counts.json
schema/: forge-deployment-manifest.schema.json  forge-hardened-runtime-publication.schema.json  forge-modelspec.schema.json  forge-observability-custody-artifact.schema.json  forge-observability-delivery-batch.schema.json  forge-observability-event.schema.json  forge-observability-event.v2.schema.json  forge-observability-event.v3.schema.json  forge-observability-signal-set.schema.json
scripts/: archive-policy.mjs  archive-policy.test.mjs  assemble-validator-release.mjs  brief25-eval.mjs  browser-e2e.mjs  browser-support.mjs  budgets.mjs  build-wasm.sh  check-actions-pinned.mjs  check-boundary-fuzz-corpora.mjs  check-compatibility.mjs  check-golden-artifacts.mjs  check-patch-hygiene.mjs  check-pilot-docs.mjs  codegen-contract.mjs  codesign-engine-batch-smoke.mjs  codesign-engine-smoke.mjs  codesign-platform-compare.mjs  codesign-platform-compare.test.mjs  codesign-search-plan-smoke.mjs  compare-counts.mjs  data-lifecycle.mjs  db-assert-commerce-jobs.mjs  db-assert-consent.mjs  db-assert-lifecycle.mjs  db-assert-migrations.mjs  db-assert-modal-operations.mjs  db-assert-p3.mjs  (+49 more)
workers/: package.json  pyproject.toml
workers/forge_workers/: __init__.py  bridge.py  codesign.py  codesign_batch.py  codesign_runtime.py  codesign_search.py  commerce.py  contract.py  deployment.py  external.py  faults.py  geometry.py  health.py  license_exports.py  maintenance.py  mjx_benchmark.py  mjx_decision_benchmark.py  modal_adapter.py  modal_app.py  modal_evidence.py  mujoco_parity.py  net_security.py  object_storage.py  observability.py  photoscan.py  policy_transfer.py  queue.py  replay.py  runner.py  runtime_secrets.py  simulation.py
workers/forge_workers/etl/: __init__.py  adapters.py  citations.py  ingest.py
workers/forge_workers/training/: __init__.py  bundle.py  controllers.py  ground_env.py  jobs.py  mujoco_env.py  offline_dataset.py  offline_evidence.py  offline_runner.py  overnight_evidence.py  policy_fixture.py  sb3_runner.py  sb3_training.py  scorecard.py  tasks.py
workers/integration/: assert_commerce_postgres.py  assert_modal_operations_postgres.py  assert_policy_delivery_postgres.py  assert_queue_faults_postgres.py
workers/tests/: test_boundary_fuzz_corpora.py  test_citations.py  test_codesign_engine_batch.py  test_codesign_engine_runtime.py  test_codesign_optimizer.py  test_codesign_search_plan.py  test_commerce.py  test_contract.py  test_course_tasks.py  test_deployment.py  test_etl_adapters.py  test_geometry_print_artifacts.py  test_license_exports.py  test_maintenance_handoffs.py  test_mjx_benchmark.py  test_mjx_decision_benchmark.py  test_mjx_feasibility.py  test_modal_adapter.py  test_modal_app.py  test_modal_evidence.py  test_mujoco_parity.py  test_object_storage.py  test_observability.py  test_offline_dataset.py  test_offline_runner.py  test_overnight_evidence.py  test_photoscan_live_adapter.py  test_policy_fixture.py  test_policy_transfer.py  test_replay_dimensions.py  test_runtime_health.py  test_sb3_mujoco_runtime.py  test_sb3_training_bundle.py  test_scorecard.py  test_security_boundaries.py  test_training_live_adapter.py  test_worker_jobs.py
workers/tests/fixtures/: rover-training.forge.json
(+149 files in other folders)
