[workspace]
resolver = "2"
members = [
    "crates/forge-contract",
    "crates/forge-geometry",
    "crates/forge-motion",
    "crates/forge-num",
    "crates/forge-sim",
    "crates/forge-gen",
    "crates/forge-validate",
    "crates/forge-wasm",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/RNT56/TTC"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
sha2 = "0.11"

[profile.release]
lto = "thin"
