[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-workers"
version = "0.2.0"
description = "FORGE compute plane: queue-driven Python workers (ETL, OCCT, photoscan, training). No public network surface."
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8"]
queue = ["psycopg[binary]>=3.2"]
mujoco = ["mujoco==3.9.0"]
# Heavy runtime stacks stay out of the default worker install. The parity extra
# pins MuJoCo exactly; training, geometry, and GPU stacks remain per-family image
# dependencies with their own reviewed pins.

[tool.setuptools.packages.find]
include = ["forge_workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
