[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-workers"
version = "0.2.0"
description = "FORGE compute plane: queue-driven Python workers (ETL, OCCT, photoscan, training). No public network surface."
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8"]
deployment = ["modal==1.5.2"]
queue = ["psycopg[binary]>=3.2"]
mujoco = ["mujoco==3.9.0"]
training = [
  "numpy==2.5.1",
  "gymnasium==1.3.0",
  "torch==2.13.0",
  "stable-baselines3==2.9.0",
  "onnx==1.22.0",
  "mujoco==3.9.0",
]
mjx = [
  "numpy==2.5.1",
  "mujoco==3.9.0",
  "mujoco-mjx==3.9.0",
  "jax==0.10.2",
  "jaxlib==0.10.2",
]
# Heavy runtime stacks stay out of the default worker install. The parity extra
# and P7 training/MJX extras pin reviewed direct runtimes exactly; geometry and
# other GPU stacks remain per-family image dependencies with their own reviewed
# pins.

[tool.setuptools.packages.find]
include = ["forge_workers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
