[package]
name = "forge-contract"
description = "FORGE Model Contract v2.2 — serde types, schemars JSON-Schema emission, lockfile resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# property-based testing for the schema heart (test-only dependency)
proptest = "1"
