[package]
name = "forge-gen"
description = "FORGE parametric generators — family #1: the quadruped (P2-005)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-contract = { path = "../forge-contract" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
forge-validate = { path = "../forge-validate" }

[[bin]]
name = "forge-gen"
path = "src/main.rs"
