[package]
name = "forge-gen"
description = "FORGE parametric generators — family #1: the quadruped (P2-005)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forge-contract = { version = "0.1.0", path = "../forge-contract" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
forge-validate = { version = "0.1.0", path = "../forge-validate" }

[[bin]]
name = "forge-gen"
path = "src/main.rs"
