[package]
name = "forge-geometry"
description = "FORGE geometry: primitives & bake to flat buffers, mass properties, interference"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-contract = { path = "../forge-contract" }
serde = { workspace = true }
serde_json = { workspace = true }
