[package]
name = "forge-geometry"
description = "FORGE geometry: primitives & bake to flat buffers, mass properties, interference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forge-contract = { version = "0.2.0", path = "../forge-contract" }
forge-num = { version = "0.2.0", path = "../forge-num" }
serde = { workspace = true }
serde_json = { workspace = true }
