[package]
name = "forge-motion"
description = "FORGE motion: archetype drivers, IK/gait/servos/mixer, constraint layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-contract = { path = "../forge-contract" }
forge-num = { path = "../forge-num" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
