[package]
name = "forge-motion"
description = "FORGE motion: archetype drivers, IK/gait/servos/mixer, constraint layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forge-contract = { version = "0.2.0", path = "../forge-contract" }
forge-num = { version = "0.2.0", path = "../forge-num" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
