[package]
name = "forge-sim"
description = "FORGE simulation models: propulsion, battery, estimator, HUD derivations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-contract = { path = "../forge-contract" }
forge-geometry = { path = "../forge-geometry" }
serde = { workspace = true }
serde_json = { workspace = true }
