[package]
name = "forge-sim"
description = "FORGE simulation models: propulsion, battery, estimator, HUD derivations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forge-contract = { version = "0.1.0", path = "../forge-contract" }
forge-num = { version = "0.1.0", path = "../forge-num" }
forge-geometry = { version = "0.1.0", path = "../forge-geometry" }
rapier3d = { version = "0.33.0", default-features = false, features = ["dim3", "f32", "std", "enhanced-determinism"] }
serde = { workspace = true }
serde_json = { workspace = true }
