[package]
name = "forge-validate"
description = "FORGE sovereign validator: check catalog, diagnostics, CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
forge-contract = { version = "0.2.0", path = "../forge-contract" }
forge-geometry = { version = "0.2.0", path = "../forge-geometry" }
forge-motion = { version = "0.2.0", path = "../forge-motion" }
forge-sim = { version = "0.2.0", path = "../forge-sim" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[[bin]]
name = "forge-validate"
path = "src/main.rs"

# the report clock on the facade target (std::time traps on wasm32) — see
# the `clock` module; judgment never depends on it (D17)
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
