[package]
name = "forge-wasm"
description = "FORGE core WASM facade: bake / tick / validate / patch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
forge-contract = { version = "0.2.0", path = "../forge-contract" }
forge-geometry = { version = "0.2.0", path = "../forge-geometry" }
forge-motion = { version = "0.2.0", path = "../forge-motion" }
forge-sim = { version = "0.2.0", path = "../forge-sim" }
forge-validate = { version = "0.2.0", path = "../forge-validate" }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# wasm-opt needs a binaryen download that some build environments block; the
# unoptimized facade is ~275 KB gz — well inside the ≤2 MB budget. Re-enable in
# CI when binaryen is vendored.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
